Fixed up Sorting questions, including (dummy) hints as needed

--- a/Exercises/Sorting/BinsortMCQ2.html
+++ b/Exercises/Sorting/BinsortMCQ2.html
@@ -24,6 +24,9 @@ numbers from 0 to <code>n-1</code></var></div>
 	<li><var>Its worst-case running time is <code>O(n^2)</code></var></li>
 	<li><var>"None of these answers"</var></li>
       </ul>  
+      <div class="hints">
+        <p>Sorry, no hints are available.</p>
+      </div>
     </div>
   </div>
 </div>
