--- a/Exercises/Sorting/BinsortMCQ4.html
+++ b/Exercises/Sorting/BinsortMCQ4.html
@@ -25,9 +25,11 @@
 	<li><var>"It can be modified to make it stable"</var></li>
 	<li><var>"It is not stable, and there is no easy way to make it stable"</var></li>
 	<li><var>"None of these answers"</var></li>
-	 </ul>  
-	</div>
-	
+      </ul>  
+      <div class="hints">
+        <p>Sorry, no hints are available.</p>
+      </div>
+    </div>
   </div>
 </div>
 </body>
