--- a/Exercises/Sorting/BinsortMCQ5.html
+++ b/Exercises/Sorting/BinsortMCQ5.html
@@ -28,6 +28,9 @@
 	<li><var><code>\Theta(n \log n)</code></var></li>
 	<li><var><code>\Theta(\mathrm{MaxKeyValue})</code></var></li>
       </ul>  
+      <div class="hints">
+        <p>Sorry, no hints are available.</p>
+      </div>
     </div>
   </div>
 </div>
