--- a/Exercises/Sorting/BinsortMCQcomps.html
+++ b/Exercises/Sorting/BinsortMCQcomps.html
@@ -24,7 +24,7 @@
 	<li><var>"There is a big difference, the asymptotic running time can change"</var></li>
       </ul>
       <div class="hints">
-        <p>Does Bubble Sort change when it make a comparison according to the order of the
+        <p>Does Binsort change when it make a comparison according to the order of the
            array input values?</p>
         <p>No, it does not matter what order the input values have.</p>
       </div>
