--- a/Exercises/Sorting/ExchangeMCQperm.html
+++ b/Exercises/Sorting/ExchangeMCQperm.html
@@ -24,6 +24,9 @@
 	<li><var><code>n</code></var></li>
 	<li><var><code>n(n+1)/2</code></var></li>
       </ul>
+      <div class="hints">
+        <p>Sorry, no hints are available.</p>
+      </div>
     </div> 
   </div>
 </div>
