--- a/Exercises/Sorting/ExchangeTF1.html
+++ b/Exercises/Sorting/ExchangeTF1.html
@@ -17,7 +17,7 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="problem">Answer TRUE or FALSE.
+      <p class="problem">Answer TRUE or FALSE.</p>
       <p class="question">
       Consider an array <code>A</code>
       of <code>n</code> records, and <code>A_R</code> the same array
@@ -28,7 +28,11 @@
 	<li><var>"True"</var></li>
 	<li><var>"False"</var></li>			  	  	 
       </ul>
+      <div class="hints">
+        <p>Sorry, no hints are available.</p>
+      </div>
     </div>
+  </div>
 </div>
 </body>
 </html>
