--- a/Exercises/Sorting/HeapsortMCQcost.html
+++ b/Exercises/Sorting/HeapsortMCQcost.html
@@ -27,9 +27,10 @@
 	<li><var><code>\Theta(n^n)</code></var></li>	  	 
       </ul>
 	  <div class="hints">
-	   <p>Does Bubble Sort's number of comparisons depend on the
+	   <p>Does Heapsort's number of comparisons depend on the
 	      particular order of the input array?</p>
-	   <p>No, it does not.</p>
+	   <p>Only a little bit, Heapsort still does basically the
+	     same work regardless of input data order.</p>
 	  </div>
     </div>
 		
