--- a/Exercises/Sorting/HeapsortMCQequal.html
+++ b/Exercises/Sorting/HeapsortMCQequal.html
@@ -25,9 +25,7 @@
 	<li><var><code>\Theta(n)</code></var></li>	 	 
       </ul>
       <div class="hints">
-	<p>Each test in the inner for loop will fail because the
-	  value at position <code>i</code> is never less than the
-	  value at position <code>i-1</code>.</p>
+	<p>Sorry, no hints are available.</p>
       </div>
     </div> 	  
   </div>
