--- a/Exercises/Sorting/HeapsortTFstable.html
+++ b/Exercises/Sorting/HeapsortTFstable.html
@@ -15,7 +15,7 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="problem">Answer TRUE or FALSE.
+      <p class="problem">Answer TRUE or FALSE.</p>
       <p class="question">
         Heapsort (as the code is written in this
 	module) is a stable sorting algorithm. Recall that a stable sorting
