--- a/Exercises/Sorting/InssortMCQinver.html
+++ b/Exercises/Sorting/InssortMCQinver.html
@@ -27,6 +27,9 @@
 	<li><var><code>\Theta(n^2)</code></var></li>
 	<li><var><code>\Theta(I)</code></var></li>
       </ul>
+      <div class="hints">
+	<p>Sorry, no hints are available.</p>
+      </div>
     </div> 
   </div>
 </div>
