--- a/Exercises/Sorting/MergesortMCQ4.html
+++ b/Exercises/Sorting/MergesortMCQ4.html
@@ -27,6 +27,9 @@
 	<li><var>"Partitioning the array"</var></li>
 	<li><var>"Achieving the base case"</var></li>
       </ul>  
+      <div class="hints">
+	<p>Sorry, no hints are available.</p>
+      </div>
     </div>
   </div>
 </div>
