--- a/Exercises/Sorting/MergesortMCQ6.html
+++ b/Exercises/Sorting/MergesortMCQ6.html
@@ -34,6 +34,9 @@
 	<li><var>"(1) and (3) only"</var></li>
 	<li><var>"(2) and (3) only"</var></li>
       </ul>
+      <div class="hints">
+	<p>Sorry, no hints are available.</p>
+      </div>
     </div>
   </div>
 </div>
