--- a/Exercises/Sorting/MergesortMCQcomplex.html
+++ b/Exercises/Sorting/MergesortMCQcomplex.html
@@ -24,7 +24,7 @@
 	<li><var>"Worst and Average"</var></li>	  	 
       </ul>
       <div class="hints">
-        <p>Does Bubble Sort's cost vary according to the order of the
+        <p>Mergesort's cost vary according to the order of the
            array input values?</p>
         <p>No, it does not matter what order the input values have.</p>
       </div>
