--- a/Exercises/Sorting/MergesortMCQcost.html
+++ b/Exercises/Sorting/MergesortMCQcost.html
@@ -27,8 +27,8 @@
 	<li><var><code>\Theta(n^n)</code></var></li>	  	 
       </ul>
 	  <div class="hints">
-	   <p>Does Bubble Sort's number of comparisons depend on the
-	      particular order of the input array?</p>
+	   <p>Does Mergesort's number of comparisons depend on the
+	     particular order of the input array?</p>
 	   <p>No, it does not.</p>
 	  </div>
     </div>
