--- a/Exercises/Sorting/MergesortMCQequal.html
+++ b/Exercises/Sorting/MergesortMCQequal.html
@@ -25,9 +25,9 @@
 	<li><var><code>\Theta(n)</code></var></li>	 	 
       </ul>
       <div class="hints">
-	<p>Each test in the inner for loop will fail because the
-	  value at position <code>i</code> is never less than the
-	  value at position <code>i-1</code>.</p>
+	<p>Does Mergesort's number of comparisons depend on the
+	  particular order of the input array?</p>
+	<p>No, it does not.</p>
       </div>
     </div> 	  
   </div>
