--- a/Exercises/Sorting/MergesortMCQworst.html
+++ b/Exercises/Sorting/MergesortMCQworst.html
@@ -24,11 +24,8 @@
           <li><var><code>n^2/2</code></var></li>	 	 
       </ul>
       <div class="hints">
-        <p>Insertion Sort's implementation is made up of two nested for loops.</p>
-        <p>The outer for loop is executed <code>n-1</code> times.</p>
-        <p>The inner for loop is executed <code>i</code> times.</p>
-        <p>The total cost is the sum of <code>i</code>'s
-           for <code>i</code> goes from 1 to <code>n</code>.</p>
+	<p>What is the asymptotic cost of Mergesort?</p>
+	<p>Only one of these answers looks like the asymptotic cost.</p>
       </div>
     </div> 
   </div>
