--- a/Exercises/Sorting/QuicksortMCQdisadvantage.html
+++ b/Exercises/Sorting/QuicksortMCQdisadvantage.html
@@ -15,14 +15,16 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <div id="problem-type-or-description">
-        <p class="question">A disadvantage of Quicksort is:</p>
-	<div class="solution"><var>Its worst-case running time is <code>O(n^2)</code></var></div>
-	<ul class="choices">
-	  <li><var>"It needs an extra array for auxiliary storage"</var></li>
-	  <li><var>"It is stable"</var></li>
-	  <li><var>Its average-case running time is <code>O(n^2)</code></var></li>
-	</ul>
+      <p class="question">A disadvantage of Quicksort is:</p>
+      <div class="solution"><var>Its worst-case running time is <code>\Theta(n^2)</code></var></div>
+      <ul class="choices">
+	<li><var>"It needs an extra array for auxiliary storage"</var></li>
+	<li><var>"It is stable"</var></li>
+	<li><var>Its average-case running time is <code>\Theta(n^2)</code></var></li>
+      </ul>
+      <div class="hints">
+	<p>How does Quicksort do in the worst case?</p>
+	<p>It requires <code>\Theta(n^2)</code>, which is pretty bad.</p>
       </div>
     </div>
   </div>
