--- a/Exercises/Sorting/QuicksortMCQpartit.html
+++ b/Exercises/Sorting/QuicksortMCQpartit.html
@@ -15,14 +15,15 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <div id="problem-type-or-description">
-    	<p class="question">After Quicksort completes the partition function, where is the pivot?</p>
-	<div class="solution"><var>"The last position in the partition"</var></div>
-	<ul class="choices">
-	  <li><var>"Between the smaller values and the greater values in the partition"</var></li>
-	  <li><var>"The first position in the partition"</var></li>
-	  <li><var>"The middle position in the partition"</var></li>
-	</ul>  
+      <p class="question">After Quicksort completes the partition function, where is the pivot?</p>
+      <div class="solution"><var>"The last position in the partition"</var></div>
+      <ul class="choices">
+	<li><var>"Between the smaller values and the greater values in the partition"</var></li>
+	<li><var>"The first position in the partition"</var></li>
+	<li><var>"The middle position in the partition"</var></li>
+      </ul>  
+      <div class="hints">
+	<p>Sorry, no hints are available.</p>
       </div>
     </div>
   </div>
