--- a/Exercises/Sorting/QuicksortMCQwhen.html
+++ b/Exercises/Sorting/QuicksortMCQwhen.html
@@ -24,6 +24,13 @@
 	  <li><var>"None of these situations"</var></li>
 	  <li><var>"We need a reasonably fast algorithm with a good worst case"</var></li>
         </ul>
+      <div class="hints">
+	<p>Quicksort doesn't change its performance based on record
+	  size.</p>
+	<p>What are Quicksort's average and worst case costs?</p>
+	<p>Quicksort's strength is its average case cost, not its
+	  worst case cost.</p>
+      </div>
       </div>
     </div>
   </div>
