--- a/Exercises/Sorting/QuicksortPartitPRO.html
+++ b/Exercises/Sorting/QuicksortPartitPRO.html
@@ -138,6 +138,9 @@ var checkAnswer = function (length) {
           else return checkAnswer(arr_size);
         </div>
       </div>
+      <div class="hints">
+	<p>Sorry, no hints are available.</p>
+      </div>
     </div>
   </div>
 </div>
