--- a/Exercises/Sorting/RadixSortTFbin.html
+++ b/Exercises/Sorting/RadixSortTFbin.html
@@ -15,7 +15,7 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="problem">Answer TRUE or FALSE.
+      <p class="problem">Answer TRUE or FALSE.</p>
       <p class="question">
         Binsort can be viewed as a special case of Radix Sort where
         the base is so big that all keys are one digit long.</p>
@@ -24,6 +24,9 @@
 	<li><var>"True"</var></li>
 	<li><var>"False"</var></li>
       </ul>
+      <div class="hints">
+	<p>Sorry, no hints are available.</p>
+      </div>
     </div>
   </div>
 </div>
