--- a/Exercises/Sorting/SelsortMCQ2.html
+++ b/Exercises/Sorting/SelsortMCQ2.html
@@ -34,9 +34,11 @@
 	<li><var>Numm1</var></li>
 	<li><var>Nump1</var></li>	  	 
       </ul>
+      <div class="hints">
+	<p>Sorry, no hints are available.</p>
+      </div>
     </div>
-
-   
+  </div>   
 </div>
 </body>
 </html>
