--- a/Exercises/Sorting/SelsortTF6.html
+++ b/Exercises/Sorting/SelsortTF6.html
@@ -22,7 +22,7 @@
   </div>
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="problem">Answer TRUE or FALSE.
+      <p class="problem">Answer TRUE or FALSE.</p>
       <p class="question">
         Selection sort is simple, but less
 	efficient than the best sorting algorithms.</p>
@@ -37,6 +37,7 @@
 	<p>Are there any better sorting algorithms?</p>
       </div>
     </div> 
+  </div>
 </div>
 </body>
 </html>
