--- a/Exercises/Sorting/ShellsortMCQ4.html
+++ b/Exercises/Sorting/ShellsortMCQ4.html
@@ -27,6 +27,9 @@
         <li><var>"An array where even positions store values 1 to n/2 and odd positions store values n/2+1 to n."</var></li>
         <li><var>"An array with random input."</var></li>
       </ul>
+      <div class="hints">
+	<p>Sorry, no hints are available.</p>
+      </div>
     </div>
   </div>
 </div>
