--- a/Exercises/Sorting/SortAlgCompMCQ10.html
+++ b/Exercises/Sorting/SortAlgCompMCQ10.html
@@ -25,6 +25,9 @@
 	<li><var>"Selection Sort"</var></li>
 	<li><var>"Insertion Sort"</var></li>
       </ul>
+      <div class="hints">
+	<p>Sorry, no hints are available.</p>
+      </div>
     </div>
   </div>
 </div>
