--- a/Exercises/Sorting/SortAlgCompMCQ6.html
+++ b/Exercises/Sorting/SortAlgCompMCQ6.html
@@ -25,6 +25,9 @@
 	<li><var>"External"</var></li>
 	<li><var>"Linear"</var></li>	  	 
       </ul>
+      <div class="hints">
+	<p>Sorry, no hints are available.</p>
+      </div>
     </div>
   </div>
 </div>
