--- a/Exercises/Sorting/SortBoundMCQ1.html
+++ b/Exercises/Sorting/SortBoundMCQ1.html
@@ -24,6 +24,9 @@
           <li><var>"The same as the lower bound for the problem"</var></li>
           <li><var>"The cost of the worst case input for the problem"</var></li>
         </ul>
+      <div class="hints">
+	<p>Sorry, no hints are available.</p>
+      </div>
       </div>
     </div>
   </div>
