--- a/Exercises/Sorting/SortBoundMCQ2.html
+++ b/Exercises/Sorting/SortBoundMCQ2.html
@@ -25,6 +25,9 @@
           <li><var>"The cost of the best case input for the problem"</var></li>
           <li><var>"The maximum cost that any algorithm to solve the problem could have"</var></li>
         </ul>
+	<div class="hints">
+	  <p>Sorry, no hints are available.</p>
+	</div>
       </div>
     </div>
   </div>
