--- a/Exercises/Sorting/SortBoundMCQ3.html
+++ b/Exercises/Sorting/SortBoundMCQ3.html
@@ -24,6 +24,9 @@
           <li><var>"The universe explodes"</var></li>
           <li><var>The problem is <code>\Theta(n)</code></var></li>
         </ul>
+	<div class="hints">
+	  <p>Sorry, no hints are available.</p>
+	</div>
       </div>
     </div>
   </div>
