--- a/Exercises/Sorting/SortBoundMCQ5.html
+++ b/Exercises/Sorting/SortBoundMCQ5.html
@@ -28,6 +28,9 @@ is <code>n!</code></var></li>
 <code>\log n</code></var></li>
           <li><var>"Any sorting algorithm can be modeled using a decision tree"</var></li>
         </ul>
+	<div class="hints">
+	  <p>Sorry, no hints are available.</p>
+	</div>
       </div>
     </div>
   </div>
