--- a/Exercises/Sorting/SortBoundMCQ7.html
+++ b/Exercises/Sorting/SortBoundMCQ7.html
@@ -24,6 +24,9 @@
           <li><var>"A tree that searches for the lower bound for sorting"</var></li>
           <li><var>"A search tree"</var></li>
         </ul>
+	<div class="hints">
+	  <p>Sorry, no hints are available.</p>
+	</div>
       </div>
     </div>
   </div>
