--- a/Exercises/Sorting/SortIntroMCQ1.html
+++ b/Exercises/Sorting/SortIntroMCQ1.html
@@ -25,6 +25,9 @@
           <li><var>"An algorithm that always gives the right answer"</var></li>
           <li><var>"An algorithm that always gives the same order for duplicate keys from run to run"</var></li>
         </ul>
+	<div class="hints">
+	  <p>Sorry, no hints are available.</p>
+	</div>
       </div>
     </div>
   </div>
