--- a/Exercises/Sorting/SortIntroMCQ2.html
+++ b/Exercises/Sorting/SortIntroMCQ2.html
@@ -24,6 +24,9 @@
           <li><var>"The allowable range for the record values"</var></li>
           <li><var>"The amount by which the values are out of order"</var></li>
         </ul>
+	<div class="hints">
+	  <p>Sorry, no hints are available.</p>
+	</div>
       </div>
     </div>
   </div>
