--- a/Exercises/Sorting/SortIntroMCQ4.html
+++ b/Exercises/Sorting/SortIntroMCQ4.html
@@ -25,6 +25,9 @@
           <li><var>"When the CPU is really fast"</var></li>
           <li><var>"When the amount of available space is small"</var></li>
         </ul>
+	<div class="hints">
+	  <p>Sorry, no hints are available.</p>
+	</div>
       </div>
     </div>
   </div>
