--- a/Exercises/Sorting/BinsortTF1.html
+++ b/Exercises/Sorting/BinsortTF1.html
@@ -15,7 +15,7 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="problem">Answer TRUE or FALSE.
+      <p class="problem">Answer TRUE or FALSE.</p>
       <p class="question">
 	Bin sort's time complexity depends on the
 	initial ordering of the keys in the input array.</p>
@@ -24,6 +24,9 @@
 	<li><var>"True"</var></li>
 	<li><var>"False"</var></li>			  	  	 
       </ul>
+      <div class="hints">
+        <p>Sorry, no hints are available.</p>
+      </div>
     </div>
   </div>
 </div>
