--- a/Exercises/Sorting/ExchangeMCQavg.html
+++ b/Exercises/Sorting/ExchangeMCQavg.html
@@ -22,6 +22,9 @@
 	<li><var>Better than <code>\Theta(n^2)</code></var></li>
 	<li><var>Worse than <code>\Theta(n^2)</code></var></li>
       </ul>
+      <div class="hints">
+        <p>Sorry, no hints are available.</p>
+      </div>
     </div> 	  
   </div>
 </div>
