--- a/Exercises/Sorting/ExchangeMCQexchange.html
+++ b/Exercises/Sorting/ExchangeMCQexchange.html
@@ -23,6 +23,9 @@
 	<li><var>Any <code>\Theta(n^2)</code> sort</var></li>
 	<li><var>Any <code>\Theta(n)</code> sort</var></li>
       </ul>
+      <div class="hints">
+        <p>Sorry, no hints are available.</p>
+      </div>
     </div> 
   </div>
 </div>
