--- a/Exercises/Sorting/ExchangeMCQinver.html
+++ b/Exercises/Sorting/ExchangeMCQinver.html
@@ -21,6 +21,9 @@
 	<li><var>"A swap"</var></li>
 	<li><var>"A type of sort"</var></li>
       </ul>
+      <div class="hints">
+        <p>Sorry, no hints are available.</p>
+      </div>
     </div> 
   </div>
 </div>
