--- a/Exercises/Sorting/ExchangeMCQswap.html
+++ b/Exercises/Sorting/ExchangeMCQswap.html
@@ -30,6 +30,9 @@
 	<li><var><code>I - 1</code></var></li>
 	<li><var><code>n - 1</code></var></li>
       </ul>
+      <div class="hints">
+        <p>Sorry, no hints are available.</p>
+      </div>
     </div> 
   </div>
 </div>
