--- a/Exercises/Sorting/ExchangeMCQtotal.html
+++ b/Exercises/Sorting/ExchangeMCQtotal.html
@@ -27,6 +27,9 @@
 	<li><var><code>n!</code></var></li>
 	<li><var><code>n!/2</code></var></li>
       </ul>
+      <div class="hints">
+        <p>Sorry, no hints are available.</p>
+      </div>
     </div> 	  
   </div>
 </div>
