--- a/Exercises/Sorting/ExchangeTF2.html
+++ b/Exercises/Sorting/ExchangeTF2.html
@@ -17,18 +17,21 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="problem">Answer TRUE or FALSE.
+      <p class="problem">Answer TRUE or FALSE.</p>
       <p class="question">
-      Consider an array <code>A</code>
-      of <code>n</code> records, and <code>A_R</code> the same array
-      in reverse order. Adding up the total number of inverted pairs
-      in these two arrays, exactly half must be inverted.</code>.</p>
+	Consider an array <code>A</code>
+	of <code>n</code> records, and <code>A_R</code> the same array
+	in reverse order. Adding up the total number of inverted pairs
+	in these two arrays, exactly half must be inverted.</p>
       <div class="solution"><var>"False"</var></div>
       <ul class="choices" data-category="true">
 	<li><var>"True"</var></li>
 	<li><var>"False"</var></li>			  	  	 
       </ul>
+      <div class="hints">
+        <p>Sorry, no hints are available.</p>
+      </div>
     </div>
-</div>
+  </div>
 </body>
 </html>
