--- a/Exercises/Sorting/HeapsortMCQ3.html
+++ b/Exercises/Sorting/HeapsortMCQ3.html
@@ -22,6 +22,9 @@
 	<li><var>"Its Average case running time is O(N^2)."</var></li>
 	<li><var>"None of these answers."</var></li>
       </ul>  
+      <div class="hints">
+        <p>Sorry, no hints are available.</p>
+      </div>
     </div>
   </div>
 </div>
