--- a/Exercises/Sorting/HeapsortMCQcomps.html
+++ b/Exercises/Sorting/HeapsortMCQcomps.html
@@ -18,15 +18,15 @@
       <p class="question">The order of the input records has what
       impact on the number of comparisons required by Heapsort
       (as presented in this module)?</p>
-      <div class="solution"><var>"None"</var></div>
+      <div class="solution"><var>"There is a constant factor difference"</var></div>
       <ul class="choices">
-	<li><var>"There is a constant factor difference"</var></li>
+	<li><var>"None"</var></li>
 	<li><var>"There is a big difference, the asymptotic running time can change"</var></li>
       </ul>
       <div class="hints">
-        <p>Does Bubble Sort change when it make a comparison according to the order of the
+        <p>Does Heapsort change when it make a comparison according to the order of the
            array input values?</p>
-        <p>No, it does not matter what order the input values have.</p>
+        <p>Yes, it changes things a little bit, but not dramatically.</p>
       </div>
     </div>
   </div>
