--- a/Exercises/Sorting/InssortMCQcomplex.html
+++ b/Exercises/Sorting/InssortMCQcomplex.html
@@ -23,6 +23,9 @@
 	<li><var>"Best and Average only"</var></li>
 	<li><var>"Worst, average, and Best"</var></li>	  	 
       </ul>
+      <div class="hints">
+	<p>Sorry, no hints are available.</p>
+      </div>
     </div>
   </div>
 </div>
