--- a/Exercises/Sorting/MergeImplMCQ2.html
+++ b/Exercises/Sorting/MergeImplMCQ2.html
@@ -23,6 +23,9 @@
 	<li><var><code>n</code></var></li>			  	  	 
 	<li><var><code>\log n</code></var></li>			  	  	 
       </ul>
+      <div class="hints">
+	<p>Sorry, no hints are available.</p>
+      </div>
     </div>
   </div>
 </div>
