--- a/Exercises/Sorting/MergesortMCQwhen.html
+++ b/Exercises/Sorting/MergesortMCQwhen.html
@@ -26,11 +26,10 @@
 	  <li><var>"None of these situations"</var></li>
         </ul>
         <div class="hints">
-          <p>Remember that insertion sort implementation is made up of two nested for loops.</p>
-          <p>The outer for loop is executed <code>n-1</code> times.
-             While the number of times the inner for loop executes depends
-             on how many keys in positions 0 to <code>i-1</code> have a
-             value less than that of the key in position i.</p>
+	  <p>Does Mergesort's number of comparisons depend on the
+	    particular order of the input array?</p>
+	  <p>No, it does not.</p>
+	  <p>This makes it reliable in the worst case</p>
         </div>
       </div>
     </div>
