--- a/Exercises/Sorting/QuicksortMCQcomps.html
+++ b/Exercises/Sorting/QuicksortMCQcomps.html
@@ -24,9 +24,9 @@
 	<li><var>"There is a constant factor difference"</var></li>
       </ul>
       <div class="hints">
-        <p>Does Bubble Sort change when it make a comparison according to the order of the
+        <p>Does Quicksort change when it make a comparison according to the order of the
            array input values?</p>
-        <p>No, it does not matter what order the input values have.</p>
+        <p>Yes, the order of input can change a lot about Quicksort's behavior.</p>
       </div>
     </div>
   </div>
