--- a/Exercises/Sorting/QuicksortMCQcostb.html
+++ b/Exercises/Sorting/QuicksortMCQcostb.html
@@ -25,6 +25,9 @@
 	<li><var><code>\Theta(\log n)</code></var></li>
 	<li><var><code>\Theta(n^2)</code></var></li>	  	 
       </ul>
+      <div class="hints">
+	<p>Sorry, no hints are available.</p>
+      </div>
     </div>
   </div>
 </div>
