--- a/Exercises/Sorting/QuicksortMCQfraction.html
+++ b/Exercises/Sorting/QuicksortMCQfraction.html
@@ -27,6 +27,9 @@
 	<li><var>Be less than 1 in <code>n</code></var></li>
 	<li><var>Be less than 1 in <code>n!</code></var></li>	  	 
       </ul>
+      <div class="hints">
+	<p>Sorry, no hints are available.</p>
+      </div>
     </div>
   </div>
 </div>
