--- a/Exercises/Sorting/QuicksortMCQpcost.html
+++ b/Exercises/Sorting/QuicksortMCQpcost.html
@@ -23,6 +23,9 @@
 	<li><var><code>\Theta(\log n)</code></var></li>
 	<li><var><code>\Theta(n \log n)</code></var></li>	  	 
       </ul>
+      <div class="hints">
+	<p>Sorry, no hints are available.</p>
+      </div>
     </div>
   </div>
 </div>
