--- a/Exercises/Sorting/RadixSortMCQ2.html
+++ b/Exercises/Sorting/RadixSortMCQ2.html
@@ -22,6 +22,9 @@
 	<li><var>"It is a quadratic time sort"</var></li>
 	<li><var>"None of these answers"</var></li>	  	 
       </ul>
+      <div class="hints">
+	<p>Sorry, no hints are available.</p>
+      </div>
     </div> 
   </div>
 </div>
