--- a/Exercises/Sorting/RadixSortMCQ5.html
+++ b/Exercises/Sorting/RadixSortMCQ5.html
@@ -23,6 +23,9 @@
 	<li><var><code>\Theta(n^2)</code></var></li>
 	<li><var><code>\Theta(n^3)</code></var></li>
       </ul>
+      <div class="hints">
+	<p>Sorry, no hints are available.</p>
+      </div>
     </div> 
   </div>
 </div>
