--- a/Exercises/Sorting/RadixSortMCQcomps.html
+++ b/Exercises/Sorting/RadixSortMCQcomps.html
@@ -24,8 +24,8 @@
 	<li><var>"There is a big difference, the asymptotic running time can change"</var></li>
       </ul>
       <div class="hints">
-        <p>Does Bubble Sort change when it make a comparison according to the order of the
-           array input values?</p>
+        <p>Radix Sort works differently from most sorts, it does not
+          directly compare records
         <p>No, it does not matter what order the input values have.</p>
       </div>
     </div>
