--- a/Exercises/Sorting/RadixSortTF1.html
+++ b/Exercises/Sorting/RadixSortTF1.html
@@ -15,7 +15,7 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="problem">Answer TRUE or FALSE.
+      <p class="problem">Answer TRUE or FALSE.</p>
       <p class="question">Radix sort processes one digit at a time,
 	and it uses a Binsort to sort the <code>n</code> records on that
 	digit. However, any stable sort could have been used in place
@@ -25,6 +25,9 @@
 	<li><var>"True"</var></li>
 	<li><var>"False"</var></li>
       </ul>
+      <div class="hints">
+	<p>Sorry, no hints are available.</p>
+      </div>
     </div>
   </div>
 </div>
