--- a/Exercises/Sorting/RadixSortTF3.html
+++ b/Exercises/Sorting/RadixSortTF3.html
@@ -24,6 +24,9 @@
 	<li><var>"True"</var></li>
 	<li><var>"False"</var></li>			  	  	 
       </ul>
+      <div class="hints">
+	<p>Sorry, no hints are available.</p>
+      </div>
     </div> 
   </div>
 </div>
