--- a/Exercises/Sorting/RadixsortPRO.html
+++ b/Exercises/Sorting/RadixsortPRO.html
@@ -188,6 +188,9 @@ function checkAnswer(arr_size) {
           else return checkAnswer(arr_size);
 	</div>
       </div>
+      <div class="hints">
+	<p>Sorry, no hints are available.</p>
+      </div>
     </div>
   </div>
 </div>
