--- a/Exercises/Sorting/SortBoundMCQ6.html
+++ b/Exercises/Sorting/SortBoundMCQ6.html
@@ -25,6 +25,9 @@
           <li><var><code>\Omega(\log n)</code></var></li>
           <li><var><code>\Omega(n^n)</code></var></li>
         </ul>
+	<div class="hints">
+	  <p>Sorry, no hints are available.</p>
+	</div>
       </div>
     </div>
   </div>
