--- a/Exercises/Sorting/SortCompareMCQ4.html
+++ b/Exercises/Sorting/SortCompareMCQ4.html
@@ -23,7 +23,11 @@
 	<li><var>"Both"</var></li>			  	  	 
 	<li><var>"Neither"</var></li>			  	  	 
       </ul>
+      <div class="hints">
+	<p>Sorry, no hints are available.</p>
+      </div>
     </div>
+  </div>
 </div>
 </body>
 </html>
