--- a/Exercises/Sorting/SortCompareTF1.html
+++ b/Exercises/Sorting/SortCompareTF1.html
@@ -16,7 +16,7 @@
   <div class="problems">
     <div id="problem-type-or-description">
       <div class="spin">
-        <p class="problem">Answer TRUE or FALSE.
+        <p class="problem">Answer TRUE or FALSE.</p>
         <p class="question">
           {Most programming languages will let us
           re-define "<" and ">" to handle comparison of arbitrary objects|
@@ -28,7 +28,11 @@
 	<li><var>"True"</var></li>
 	<li><var>"False"</var></li>			  	  	 
       </ul>
+      <div class="hints">
+	<p>Sorry, no hints are available.</p>
+      </div>
     </div>
+  </div>
 </div>
 </body>
 </html>
