--- a/Exercises/Sorting/SortCompareTF3.html
+++ b/Exercises/Sorting/SortCompareTF3.html
@@ -27,7 +27,11 @@
 	<li><var>"True"</var></li>
 	<li><var>"False"</var></li>			  	  	 
       </ul>
+      <div class="hints">
+	<p>Sorry, no hints are available.</p>
+      </div>
     </div>
+  </div>
 </div>
 </body>
 </html>
