Fixed some layout problems and added real hints to all hashing questions

--- a/Exercises/Hashing/HashChapterSumm.html
+++ b/Exercises/Hashing/HashChapterSumm.html
@@ -18,7 +18,7 @@
 <body>
   <div class="exercise" data-name="HashFuncSumm" ></div>
   <div class="exercise" data-name="HashFuncPROSumm" ></div>
-  <div class="exercise" data-name="HashCollisionSumm" ></div>
+  <div class="exercise" data-name="HashAnalSumm" ></div>
   <div class="exercise" data-name="HashDelSumm" ></div>
 </body>
 </html>
