--- a/Exercises/Hashing/HashDelMCQ1.html
+++ b/Exercises/Hashing/HashDelMCQ1.html
@@ -23,7 +23,9 @@
 	  <li><var> "It causes a slight decrease in the average time to insert and search" </var></li>
 	</ul>
 	<div class="hints">
-          <p>Sorry, no hints are available.</p>
+          <p>The tombstones fill some slots of the table.</p>
+          <p>While tombstone slots can be reused, they do have to be
+            searched through.</p>
 	</div>
       </div> 
     </div>	 
