--- a/Exercises/Hashing/HashDelMCQ2.html
+++ b/Exercises/Hashing/HashDelMCQ2.html
@@ -25,7 +25,7 @@
 	  <li><var> "Gravestone" </var></li>
 	</ul>
 	<div class="hints">
-          <p>Sorry, no hints are available.</p>
+          <p>Starts with a T...</p>
 	</div>
       </div> 
     </div>	 
