--- a/Exercises/Hashing/HashDelTF3.html
+++ b/Exercises/Hashing/HashDelTF3.html
@@ -26,7 +26,8 @@
 	  <li><var> "False" </var></li>
 	</ul>
 	<div class="hints">
-          <p>Sorry, no hints are available.</p>
+          <p>If there is an empty slot along a probe path, records
+            further down the path won't be found on a search.</p>
 	</div>
       </div> 
     </div>	 
