--- a/Exercises/Hashing/HashDelTF4.html
+++ b/Exercises/Hashing/HashDelTF4.html
@@ -26,7 +26,7 @@
 	  <li><var> "False" </var></li>
 	</ul>
 	<div class="hints">
-          <p>Sorry, no hints are available.</p>
+          <p>Tombstone slots can be resued.</p>
 	</div>
       </div> 
     </div>	 
