--- a/Exercises/Hashing/HashDelTF5.html
+++ b/Exercises/Hashing/HashDelTF5.html
@@ -26,7 +26,8 @@
 	  <li><var> "False" </var></li>
 	</ul>
 	<div class="hints">
-          <p>Sorry, no hints are available.</p>
+          <p>They do take up slots in the table.</p>
+          <p>So they do need to be searched over.</p>
 	</div>
       </div> 
     </div>	 
