--- a/Exercises/Hashing/HashFuncMCQ1.html
+++ b/Exercises/Hashing/HashFuncMCQ1.html
@@ -23,7 +23,8 @@
 	  <li><var> "All of the digits or bits in the key" </var></li>
 	</ul>
 	<div class="hints">
-          <p>Sorry, no hints are available.</p>
+          <p>Think of taking a three-digit number mod 10. What digit
+            is used?</p>
 	</div>
       </div> 
     </div>	 
