--- a/Exercises/Hashing/HashFuncMCQ2.html
+++ b/Exercises/Hashing/HashFuncMCQ2.html
@@ -23,7 +23,10 @@
 	  <li><var> "All of the digits or bits in the key" </var></li>
 	</ul>
 	<div class="hints">
-          <p>Sorry, no hints are available.</p>
+          <p>Consider what happens with 10 bins and 3-digit numbers in
+            the range 0 to 999.</p>
+          <p>0 to 99 goes to the first bin, 100 to 199 to the second,
+            and so on.</p>
 	</div>
       </div> 
     </div>	 
