--- a/Exercises/Hashing/HashFuncMCQ3.html
+++ b/Exercises/Hashing/HashFuncMCQ3.html
@@ -23,7 +23,10 @@
 	  <li><var> "The low order digits or bits in the key" </var></li>
 	</ul>
 	<div class="hints">
-          <p>Sorry, no hints are available.</p>
+          <p>Mid-squares method will square the key value before
+            pulling out the middle bits.</p>
+	  <p>While it uses only the middle bits of the squared value,
+	    all of the bits in the original key will influence the result.</p>
 	</div>
       </div> 
     </div>	 
