--- a/Exercises/Hashing/HashFuncMCQ4.html
+++ b/Exercises/Hashing/HashFuncMCQ4.html
@@ -27,7 +27,7 @@
 	<li><var>"Usually"</var></li>
       </ul>
       <div class="hints">
-        <p>Sorry, no hints are available.</p>
+        <p>Addition is commutative.</p>
       </div>
     </div>
   </div>
