--- a/Exercises/Hashing/HashFuncMCQ5.html
+++ b/Exercises/Hashing/HashFuncMCQ5.html
@@ -28,7 +28,9 @@
 	<li><var>"Usually"</var></li>
       </ul>
       <div class="hints">
-        <p>Sorry, no hints are available.</p>
+        <p>Swapping a couple of different letters will change the result.</p>
+        <p>Swapping the same letters will not change the result.</p>
+        <p>Swapping chunks of 4 letters will not change the result.</p>
       </div>
     </div>
   </div>
