--- a/Exercises/Hashing/HashFuncTF6.html
+++ b/Exercises/Hashing/HashFuncTF6.html
@@ -27,7 +27,8 @@
 	<li><var>"False"</var></li>
       </ul>
       <div class="hints">
-        <p>Sorry, no hints are available.</p>
+        <p>All hash functions should return a legal index in the hash table.</p>
+        <p>The length of the string does not change this.</p>
       </div>
     </div>
   </div>
