--- a/Exercises/Hashing/HashFuncTFdisk.html
+++ b/Exercises/Hashing/HashFuncTFdisk.html
@@ -29,7 +29,8 @@
 	  <li><var> "False" </var></li>
 	</ul>
 	<div class="hints">
-          <p>Sorry, no hints are available.</p>
+          <p>Managing a bunch of linked lists is not so good on disk.</p>
+          <p>Otherwise, hashing works fine on disk.</p>
 	</div>
       </div> 
     </div>	 
