--- a/Exercises/Hashing/HashMCQavg.html
+++ b/Exercises/Hashing/HashMCQavg.html
@@ -25,7 +25,9 @@
 	  <li><var><code>O(\log n)</code></var></li>
 	</ul>
 	<div class="hints">
-          <p>Sorry, no hints are available.</p>
+          <p>If the system is working right, you should only need to
+            look at one slot most of the time, or occasionally a
+            couple of slots.</p>
 	</div>
       </div>
     </div>
