--- a/Exercises/Hashing/HashMCQclosed.html
+++ b/Exercises/Hashing/HashMCQclosed.html
@@ -22,7 +22,7 @@
           <li><var>"Records are stored on a list associated with a slot in the hash table"</var></li>
 	</ul>
 	<div class="hints">
-          <p>Sorry, no hints are available.</p>
+          <p>In closed hashing, the records are in the table.</p>
 	</div>
       </div> 
     </div>
