--- a/Exercises/Hashing/HashMCQcollision.html
+++ b/Exercises/Hashing/HashMCQcollision.html
@@ -25,7 +25,7 @@
 	  <li><var> "Two records with the same key have different hash values"</var></li>
 	</ul>
 	<div class="hints">
-          <p>Sorry, no hints are available.</p>
+          <p>Collision occurs when two keys try to go to the same slot.</p>
 	</div>
       </div> 
     </div>	 
