--- a/Exercises/Hashing/HashMCQhashdef.html
+++ b/Exercises/Hashing/HashMCQhashdef.html
@@ -25,7 +25,8 @@
 	  <li><var> "Return values in equal distribution throughout the table" </var></li>
 	</ul>
 	<div class="hints">
-          <p>Sorry, no hints are available.</p>
+          <p>A hash function should always give you a legal index into
+            the hash table array.</p>
 	</div>
       </div> 
     </div>	 
