--- a/Exercises/Hashing/HashMCQlinprob.html
+++ b/Exercises/Hashing/HashMCQlinprob.html
@@ -16,14 +16,14 @@
     <div class="problems">
       <div id="problem-type-or-description">
         <p class="question">What is a disadvantage of linear probing?</p>
-        <div class="solution"><var>"You tend to get primary clustering if the hashing function is not uniform"</var></div>
+        <div class="solution"><var>"You tend to get primary clustering"</var></div>
 	<ul class="choices" data-show="4" data-none="true">
 	  <li><var>"It can lead to allocating a lot of extra memory"</var></li>
-	  <li><var>"You tend to get primary clustering if the hashing function is not uniform "</var></li>
+	  <li><var>"You tend to get primary clustering"</var></li>
 	  <li><var>"The algorithm is difficult to program"</var></li>			  	  	 
 	</ul>
 	<div class="hints">
-          <p>Sorry, no hints are available.</p>
+          <p>Clusters pile up into bigger clusters.</p>
 	</div>
       </div> 
     </div>
