--- a/Exercises/Hashing/HashMCQopen.html
+++ b/Exercises/Hashing/HashMCQopen.html
@@ -23,7 +23,8 @@
         <li><var>"Records are stored on a list associated with a slot in the hash table"</var></li>
 	</ul>
 	<div class="hints">
-          <p>Sorry, no hints are available.</p>
+          <p>In open hashing, where are the records stored?</p>
+          <p>They are stored in linked lists outside the table.</p>
 	</div>
       </div> 
     </div>
