--- a/Exercises/Hashing/HashMCQopenfull.html
+++ b/Exercises/Hashing/HashMCQopenfull.html
@@ -31,7 +31,8 @@
 	  <li><var>"None of the above"</var></li>
 	</ul>
 	<div class="hints">
-          <p>Sorry, no hints are available.</p>
+          <p>In open hashing, where are the records stored?</p>
+          <p>They are stored in linked lists outside the table.</p>
 	</div>
       </div> 
     </div>	  
