--- a/Exercises/Hashing/HashMCQprobe.html
+++ b/Exercises/Hashing/HashMCQprobe.html
@@ -24,7 +24,8 @@
 	  <li><var> "It is another name for collision resolution" </var></li>
 	</ul>
 	<div class="hints">
-          <p>Sorry, no hints are available.</p>
+          <p>Probing is part of collision resolution.</p>
+          <p>The probe sequence tells you where to look next.</p>
 	</div>
       </div> 
     </div>	 
