--- a/Exercises/Hashing/HashMCQquadprobe.html
+++ b/Exercises/Hashing/HashMCQquadprobe.html
@@ -23,7 +23,8 @@
 	  <li><var>"Primary clustering can degrade performance"</var></li>
 	</ul>
 	<div class="hints">
-          <p>Sorry, no hints are available.</p>
+          <p>Usually, the probe sequence for quadratic probing does
+            not visit all slots of the table.</p>
 	</div>
       </div> 	  	  
     </div>
