--- a/Exercises/Hashing/HashMCQquery.html
+++ b/Exercises/Hashing/HashMCQquery.html
@@ -25,7 +25,8 @@
 	  <li><var>"None of these"</var></li>			  	  	 
 	</ul>
 	<div class="hints">
-          <p>Sorry, no hints are available.</p>
+          <p>Hashing takes a key value and then looks at a particular
+            slot in the table.</p>
 	</div>
       </div> 
     </div>
