--- a/Exercises/Hashing/HashMCQtablesize.html
+++ b/Exercises/Hashing/HashMCQtablesize.html
@@ -23,7 +23,9 @@
 	  <li><var>"No, the hash function would now generate illegal values"</var></li>
 	</ul>
 	<div class="hints">
-          <p>Sorry, no hints are available.</p>
+          <p>Will the old hash function go to an illegal index in the
+            new table?</p>
+          <p>Will the old hash function go to all slots of the new table?</p>
 	</div>
       </div> 
     </div>  
