--- a/Exercises/Hashing/HashingBucket2PRO.html
+++ b/Exercises/Hashing/HashingBucket2PRO.html
@@ -22,7 +22,7 @@
     #container {
       border: 0;
       width: 780px;
-      height: 740px;
+      height: 710px;
       padding: 10px;
       overflow: hidden;
     }
@@ -34,12 +34,18 @@
       height: 80px;
     }
 
+    .jsavarray .jsavindex {
+      min-height: 30px;
+      min-width: 30px;
+      line-height: 30px;
+    }
+
     #reset { margin-right: 20px;}
 
     svg {
       z-index: 50;
     }
-    .jsavcanvas { height: 500px;}
+    .jsavcanvas { height: 350px;}
   </style>
 </head>
 
@@ -86,13 +92,13 @@ function resetInit() {
   jsavInput = jsav.ds.array(initData, {indexed: true, center: false,
                             layout: "vertical", left: 20, top: 30});
   jsav.label("Hash Table", {left: 20, top: 8});
-  jsav.label("<b style='color:#0b0;'>B0</b>", {left: 85, top: 65});
-  jsav.label("<b style='color:#0b0;'>B1</b>", {left: 85, top: 157});
-  jsav.label("<b style='color:#0b0;'>B2</b>", {left: 85, top: 249});
-  jsav.label("<b style='color:#0b0;'>B3</b>", {left: 85, top: 341});
-  jsav.label("<b style='color:#0b0;'>B4</b>", {left: 85, top: 433});
+  jsav.label("<b style='color:#0b0;'>B0</b>", {left: 80, top: 51});
+  jsav.label("<b style='color:#0b0;'>B1</b>", {left: 80, top: 113});
+  jsav.label("<b style='color:#0b0;'>B2</b>", {left: 80, top: 175});
+  jsav.label("<b style='color:#0b0;'>B3</b>", {left: 80, top: 237});
+  jsav.label("<b style='color:#0b0;'>B4</b>", {left: 80, top: 299});
   for (i = 0; i < 4; i++) {
-    jsav.g.line(20, 123 + (i * 92), 85, 123 + (i * 92), {"stroke-width": 2});
+    jsav.g.line(20, 93 + (i * 62), 70, 93 + (i * 62), {"stroke-width": 2});
   }
   setGray(jsavInput, [0, 1, 4, 5, 8, 9]);
   jsavInput.click(function (index) { clickHandler(this, index); });
@@ -204,7 +210,11 @@ function checkAnswer() {
 	</div>
       </div>
       <div class="hints">
-        <p>Sorry, no hints are available.</p>
+        <p>The alternate bucket hash first hashes to a home slot in the
+          normal way.</p>
+        <p>If there is a collision, then linear probing is used to
+          locate another slot <b>within that bucket</b>.
+	<p>If the bucket is full, then put the record into the overflow.</p>
       </div>
     </div>
   </div>
