--- a/Exercises/Hashing/OpenHashPRO.html
+++ b/Exercises/Hashing/OpenHashPRO.html
@@ -22,7 +22,7 @@ Written by Cliff Shaffer -->
     #container {
       border: 0;
       width: 780px;
-      height: 760px;
+      height: 850px;
       padding: 10px;
       overflow: hidden;
     }
@@ -35,6 +35,7 @@ Written by Cliff Shaffer -->
     }
 
     #reset { margin-right: 20px;}
+    .jsavcanvas { height: 460px;}
   </style>
 </head>
 
@@ -187,7 +188,9 @@ console.log("curr is " + curr + ", arr_size is " + arr_size);
 	</div>
       </div>
       <div class="hints">
-        <p>Sorry, no hints are available.</p>
+        <p>This is easy. Just click on each value from top to bottom
+          in the left array ...</p>
+	<p>... compute modulo 10, and click on that bin in the right array.</p>
       </div>
     </div>
   </div>
