--- a/Exercises/Hashing/HashFuncTF7.html
+++ b/Exercises/Hashing/HashFuncTF7.html
@@ -25,7 +25,7 @@
           <li><var>"False"</var></li>
 	</ul>
 	<div class="hints">
-          <p>Sorry, no hints are available.</p>
+          <p>Hashing is good only for exact match queries.</p>
 	</div>
       </div> 
     </div>	 
