--- a/Exercises/Hashing/HashingLinearProbePRO.html
+++ b/Exercises/Hashing/HashingLinearProbePRO.html
@@ -116,7 +116,12 @@ var checkAnswer = function() {
         </div>
       </div>
       <div class="hints">
-        <p>Sorry, no hints are available.</p>
+        <p>Linear probing is the simple one.</p>
+        <p>First use the hash function to computer the home slot.</p>
+	<p>If there is a collsion, then just step to the right by one
+	  step at a time until an empty slot is found.</p>
+	<p>If we reach the end of the array, then cycle around to the
+	  beginning.</p>
       </div>
     </div>
   </div>
