--- a/Exercises/Hashing/HashingPseudoRandomProbePRO.html
+++ b/Exercises/Hashing/HashingPseudoRandomProbePRO.html
@@ -141,7 +141,13 @@ var checkAnswer = function() {
         </div>
       </div>
       <div class="hints">
-        <p>Sorry, no hints are available.</p>
+        <p>First use the hash function to computer the home slot.</p>
+	<p>If there is a collision, use the random permutation table
+	  to tell you how far to step from the home slot.</p>
+	<p>Offsets are always from the home slot, not from the last
+	slot probed to.</p>
+	<p>If we reach the end of the array while stepping, then cycle
+	  around to the beginning.</p>
       </div>
     </div>
   </div>
