Fixed a bug in configure.py that prevented the module option from being appended to exercises that are not configured properly

--- a/Exercises/Sorting/ShellsortMCQskip.html
+++ b/Exercises/Sorting/ShellsortMCQskip.html
@@ -18,7 +18,7 @@
       <p class="question">If we Shellsort an array of length 9, and we
       start with an increment size of 5, which element (if any) will be
       skipped on the first pass due to being in a sublist of only
-      one elemente?</p>
+      one element?</p>
       <div class="solution"><var>"5"</var></div>
       <ul class="choices" data-category="true">
         <li><var>"0"</var></li>
