--- a/AV/Development/PrimAV.html
+++ b/AV/Development/PrimAV.html
@@ -4,8 +4,8 @@
   <title>Prim's Algorithm</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-  <link rel="stylesheet" href="../opendsaAV.css" type="text/css" />
-  <link rel="stylesheet" href="Prim'sAlgorithm.css" type="text/css" />
+  <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
+  <link rel="stylesheet" href="PrimAV.css" type="text/css" />
 </head>
 
 <body>
@@ -54,8 +54,8 @@
 <script src="../../JSAV/lib/jquery.transform.light.js"></script>
 <script src="../../JSAV/lib/raphael.js"></script>
 <script src="../../JSAV/build/JSAV-min.js"></script>
-<script src="../../lib/ODSA.js"></script>
-<script src="../opendsaAV.js"></script>
+<script src="../../lib/odsaUtils-min.js"></script>
+<script src="../../lib/odsaAV-min.js"></script>
 <script src="PrimAV.js"></script>
 </body>
 </html>
