--- a/AV/Development/PrimAV.html
+++ b/AV/Development/PrimAV.html
@@ -16,7 +16,7 @@
         <input type="button" id="help" name="help" value="Help" />
       </td>
       <td class="headerCenter">
-        <h1>Prim's Minimum Sspanning Tree Algorithm</h1>
+        <h1>Prim's Minimum Spanning Tree Algorithm</h1>
       </td>
       <td class="headerRight">
         <input type="button" id="about" name="about" value="About" />
