Fixed run and reset buttons in graphDFS and graphBFS

--- a/AV/Development/graphBFS.html
+++ b/AV/Development/graphBFS.html
@@ -14,7 +14,6 @@
     <tr>
       <td class="headerLeft">
         <input type="button" id="help" name="help" value="Help" />
-		
       </td>
       <td class="headerCenter">
         <h1>Breadth First Search Graph Transversal</h1>
@@ -35,7 +34,7 @@
   <div class="avcontainer">
     <span class="jsavcounter"></span>
     <div class="jsavcontrols"></div>
-	<p class="jsavoutput jsavline"></p>
+    <p class="jsavoutput jsavline"></p>
   </div>
 </div> 
 
@@ -44,8 +43,8 @@
 <script src="../../JSAV/lib/jquery.transform.light.js"></script>
 <script src="../../JSAV/lib/raphael.js"></script>
 <script src="../../JSAV/build/JSAV-min.js"></script>
-<script src="../../lib/ODSA.js"></script>
-<script src="../opendsaAV.js"></script>
+<script src="../../lib/odsaUtils.js"></script>
+<script src="../../lib/odsaAV.js"></script>
 <script src="graphBFS.js"></script>
 </body>
 </html>
